# deep_research_strands

./: .env  .env.example  .gitignore  =3.2.1  architecture.txt  architecture_with_events.txt  config.py  deno.json  domain.py  frontend_streaming_example.py  grpo_innovation.md  main.py  pyproject.toml  research_events_example.py  test.py  test_events_standalone.py  test_langfuse_connection.py
.kiro/steering/: product.md  structure.md  tech.md
agents/research_orchestrator/: agent.py  event_integration.py  observability_wrapper.py  prompt.py
docs/: event_driven_implementation_plan.txt  observability_cleanup_summary.md  phase1_completion_summary.md  phase2_websocket_integration_summary.md  phase3_agent_integration_summary.md  phase4.md  websocket_feedback_integration.md
domain/: __init__.py  query.py  research.py  tool_call.py  tools.py  user.py
domain/entities/: project.py  research.py  user.py
domain/events/: __init__.py  agent_events.py  base.py  research_events.py  workflow_events.py
domain/services/: event_bus.py
examples/: phase3_agent_integration_example.py  simplified_langfuse_example.py  websocket_feedback_example.py  websocket_integration_example.py
infrastructure/: __init__.py
infrastructure/events/: __init__.py  simple_event_bus.py
notebooks/: agents.ipynb
tests/: test_domain_events.py
ui/: SimpleApp.tsx  build.ts  bundle-analysis.md  bundle-analyzer.ts  bundle-stats.json  deno.json  dev-server.ts  index.html  main.js  main.tsx  minimal.js  minimal.tsx  responsive-test.tsx  simple-test.tsx  simple.js  sw.js  test-minimal.html  test-runner.ts  test-simple.html  test.html  working-main.js
(+101 files in other folders)
