[project]
name = "deepresearch-strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "langfuse>=3.2.1",
    "strands-agents-tools>=0.2.1",
    "strands-agents[anthropic,ollama,otel]>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "strands-agents-builder>=0.1.7",
    "strands-agents-tools>=0.2.1",
]
