[project]
name = "deepresearch-strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "langfuse>=3.2.1",
    "strands-agents-tools>=0.2.1",
    "strands-agents[anthropic,ollama,otel]>=1.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "fastapi>=0.104.0",
    # Enhanced Langfuse integration
    "langfuse[openai]>=3.2.1",  # Includes OpenAI integration for LLM tracking
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "strands-agents-builder>=0.1.7",
    "strands-agents-tools>=0.2.1",
]
